updt requirement.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-fastapi
-uvicorn
+fastapi==0.103.1
 alembic==1.12.0
 SQLAlchemy==2.0.21
 python-jose[cryptography]
 psycopg2==2.9.7
 passlib[bcrypt]
-fastapi-mail
+fastapi-mail==1.4.1
+uvicorn==0.23.2
