--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,12 @@
-# fastapi==0.103.1
-# alembic==1.12.0
-# SQLAlchemy==2.0.21
-# python-jose[cryptography]
-# psycopg2==2.9.7
-# passlib[bcrypt]
-# fastapi-mail==1.2.2
-# uvicorn
-# pydantic-extra-types==2.1.0
-# pydantic-settings==2.0.3
-# APScheduler
-# python-multipart==0.0.6
-aiosmtplib==2.0.2
-alembic==1.13.1
-annotated-types==0.6.0
-anyio==4.2.0
-bcrypt==4.0.1
-blinker==1.7.0
-cffi==1.16.0
-click==8.1.7
-colorama==0.4.6
-cryptography==41.0.7
-dnspython==2.4.2
-ecdsa==0.18.0
-email-validator==2.1.0.post1
-fastapi==0.108.0
-fastapi-mail==1.4.1
-greenlet==3.0.3
-h11==0.14.0
-idna==3.6
-Jinja2==3.1.2
-Mako==1.3.0
-MarkupSafe==2.1.3
-passlib==1.7.4
-psycopg2==2.9.9
-pyasn1==0.5.1
-pycparser==2.21
-pydantic==2.5.3
-pydantic-extra-types==2.3.0
-pydantic-settings==2.1.0
-pydantic_core==2.14.6
-python-dotenv==1.0.0
-python-jose==3.3.0
+fastapi==0.103.1
+alembic==1.12.0
+SQLAlchemy==2.0.21
+python-jose[cryptography]
+psycopg2==2.9.7
+passlib[bcrypt]
+fastapi-mail==1.2.2
+uvicorn
+pydantic-extra-types==2.1.0
+pydantic-settings==2.0.3
+APScheduler
 python-multipart==0.0.6
-rsa==4.9
-six==1.16.0
-sniffio==1.3.0
-SQLAlchemy==2.0.24
-starlette==0.32.0.post1
-typing_extensions==4.9.0
-uvicorn==0.25.0
